syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/4Sao1Sad/yuemnoi-activity";

message ActivityLog {
		uint64 id = 1;
		string logDetail = 2;
		string user_id = 3;
		google.protobuf.Timestamp timestamp = 4;
}

// Request message for creating a new ActivityLog
message CreateActivityLogRequest {
    string logDetail = 1;
		string user_id = 2;       
}

// Response message for CreateActivityLog service
message CreateActivityLogResponse {
		ActivityLog activityLog = 1;      
}

// Request message for viewing ActivityHistory
message ViewActivityHistoryRequest {
		string user_id = 1;       
}

// Response message for ViewActivityHistory service
message ViewActivityHistoryResponse {
		repeated ActivityLog activityLog = 1;      
}

service ActivityLogService {
		rpc CreateActivityLog(CreateActivityLogRequest) returns (CreateActivityLogResponse) {}
		rpc ViewActivityHistory(ViewActivityHistoryRequest) returns (ViewActivityHistoryResponse) {}
}